# zeroid_poc

./: README.md  app.json  package-lock.json  package.json  tsconfig.json
app/: _layout.tsx  index.tsx
app/(tabs)/: explore.tsx  index.tsx
assets/csca/: us_certs.json
ios/: PassportNFCScanner.m  PassportNFCScanner.swift  Podfile
ios/ZeroID/: Info.plist
ios/ZeroID.xcodeproj/: project.pbxproj
ios/ZeroID.xcodeproj/xcshareddata/xcschemes/: ZeroID.xcscheme
ios/ZeroID.xcworkspace/: contents.xcworkspacedata
ios/ZeroID.xcworkspace/xcshareddata/swiftpm/: Package.resolved
rust/: .gitignore  Cargo.toml  Makefile
rust/passport-verifier/: Cargo.toml
rust/passport-verifier-core/: Cargo.toml
rust/passport-verifier/src/: main.rs
rust/src/: lib.rs  verify.rs
rust/uniffi-bindings/: Cargo.toml
rust/uniffi-bindings/src/: lib.rs
utils/: array-utils.ts  passport-utils.ts
