[package]
name = "zeroid_rust_passport_utils"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "zeroid_rust_passport_utils"
 
[dependencies]
base64 = "0.22.1"
thiserror = "2.0.11"
zeroid_rust_passport_verifier_core = { path = "../passport-verifier-core" }
uniffi = { version = "0.28.3", features = [ "cli" ] }
